
New features:
A.F....... [ZBX-5074] redesign configuration of action (Eduard)
..F....... [ZBX-1357] updated Brazilian Portuguese, French, Japanese, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)
..F....... [ZBXNEXT-1019] updated jQuery to 1.7.2 and jQuery UI to 1.8.20 (Vedmak)
..F....... [ZBXNEXT-829] Zabbix server availability check (Vedmak)

Bug fixes:
A.F....... [ZBX-4861] fixed excess queries upon no-change graph saving (Toms)
A.F....... [ZBX-5090] fixed errors when fully cloning a host that contains trigger prototypes with web items in the expression (Pavels)
.......PS. [ZBX-4980] fixed error in decoding of big base64 encoded values (Andris)
..F....... [ZBX-5081] fixed simple slide show update changes slideids in a database (Toms)
A......... [ZBX-5092] fixed the get method "nodeids" parameter not working in some APIs (Pavels)
..F....... [ZBX-5000] fixed "all" shown instead of "not selected" in Monitoring -> Discovery (Toms)
.......PS. [ZBX-4793] fixed processing of SNMP strings terminated with a NUL character (Sasha)
.......PS. [ZBX-4793] added support for display-hint when getting SNMP octet string values (dimir)
..F....... [ZBX-5080] fixed incorrect JavaScript parameter encoding in the map editor (Pavels)
..F....... [ZBX-4974] fixed don't show groups w/o templates when linking a template (Toms)
..F....... [ZBX-5096] fixed error when create hostgroup with too long name (Vedmak)
..F....... [ZBX-4985] improved hostgroup area icons layout (Vedmak)
..F....... [ZBX-5078] fixed item prototype application linking when fully cloning a host (Pavels)
A.F....... [ZBX-5053] fixed Y max/min value validation for calculated graph scales (Eduard)
A.F....... [ZBX-5029] fixed inherited item interface being updated incorrectly when changing it's type (Pavels)
A.F....... [ZBX-4958] fixed undefined indexes when switching auth method (Eduard)
..F....... [ZBX-5071] fixed macros being deleted when leaving the "macro" and "value" fields empty (Pavels)