@@ -7,6 +7,7 @@ A.F....... [ZBX-5074] redesign configuration of action (Eduard)
 ..F....... [ZBXNEXT-829] Zabbix server availability check (Vedmak)
 
 Bug fixes:
+..F....... [ZBX-4863] fixed graph Y marker positions and values when setting a minimum value for the Y scale (Pavels)
 A.F....... [ZBX-4861] fixed excess queries upon no-change graph saving (Toms)
 A.F....... [ZBX-5090] fixed errors when fully cloning a host that contains trigger prototypes with web items in the expression (Pavels)
 .......PS. [ZBX-4980] fixed error in decoding of big base64 encoded values (Andris)
@@ -55,6 +56,7 @@ A.F....... [ZBX-5074] redesign configuration of action (Eduard)
 ..F....... [ZBXNEXT-829] Zabbix server availability check (Vedmak)
 
 Bug fixes:
+..F....... [ZBX-4863] fixed graph Y marker positions and values when setting a minimum value for the Y scale (Pavels)
 A.F....... [ZBX-4861] fixed excess queries upon no-change graph saving (Toms)
 A.F....... [ZBX-5090] fixed errors when fully cloning a host that contains trigger prototypes with web items in the expression (Pavels)
 ....I..... [ZBXNEXT-1256] fixed example Linux partition LLD item (Richlv)
